tests/errors/test_61.xpp
// Invalid field for class type

class IntBox {
	pub x: i64;
	pub IntBox(x_: i64) {
		x = x_;
	}
}

fn main() void {
	let i = IntBox(21);
	let a = i.y;
}
